test/e2e/testing-manifests/ingress/pre-shared-cert/rc.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: echoheaders-https
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: echoheaders-https
    spec:
      runtimeClassName: kata-qemu
      containers:
      - name: echoheaders-https
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        ports:
        - containerPort: 8080
